
 - refactored makeIndex.pl into makeIndex.pl (web) and
   util/bse_makeindex.pl (console).
   Output from these is now encoded using the default BSE encoding.
   makeIndex.pl can now produce HTML output using admin/makeindex.tmpl
   The bse_make_index background process now uses the console version.
   https://rt4.develop-help.com/Ticket/Display.html?id=1301

Bug fixes:

 - thumb.pl would return content types with doubled image/ prefixes,
   eg. image/image/jpeg

 - update BSE::AdminUsers, BSE::ChangePW, BSE::UI::AdminReport to use
   more modern admin tags
   https://rt4.develop-help.com/Ticket/Display.html?id=1234 (partial)
   (Adrian Oldham for BSE::ChangePW, BSE::UI::AdminReport)

 - with [site].secureadmin enabled, refreshes to the secure admin url
   could cause a 500 error.

 - check nomatch fields even for blank fields.  Otherwise a field with
   a LF or CR would not be caught by the dh_one_line validation rule.

 - saving a tag from the tag manager without changing the name or
   deleting a tag that doesn't exist would result in a 500 error.
   https://rt4.develop-help.com/Ticket/Display.html?id=1287

 - setting an unfilled order's stage to "shipped" now sets whoFilled
   and whenFilled for the order.
   https://rt4.develop-help.com/Ticket/Display.html?id=1286

 - an empty title (but no missing) when saving a user or group file no
   longer defaults that to the file display name.
   https://rt4.develop-help.com/Ticket/Display.html?id=1303

 - validation errors are now correctly displayed for adding a user or
   group file
   https://rt4.develop-help.com/Ticket/Display.html?id=1302

 - supplying an empty content type when saving a user or group file
   now resets the content type to that derived from the file's display
   name.
   https://rt4.develop-help.com/Ticket/Display.html?id=1304

 - fix the message id for the "move up a level to section" message in
   the possible parents drop down.

 - error_img would produce an inline stack trace from an internal